test/good/typetest07.fsf
type tree[A,B,C] = Empty(b:bool) | Node(n:nat)
