test/bad/21_6_spectest_bad.fsf
type bad6 = Bad6(n:nat,n:bool)
